# rust_grpc

./: Cargo.toml  README.md  build.rs  grpc
proto/: nthodd.proto
src/: client.rs  server.rs
