[package]
name = "rust_grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpc_server"
path = "src/server.rs"

[[bin]]
name = "grpc_client"
path = "src/client.rs"

[dependencies]
prost = "0.11.0"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.0"

[build-dependencies]
tonic-build = "0.8.0"
